# MiniBoost

./: CMakeLists.txt  conf.yaml  data.h  main.cpp
binary_classification/: mushroom.conf
utils/: config.h  utils.h
